# zileo-docs

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  NOTICE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: codeql.yml  validate.yml
docs/: api-reference.md  architecture.md  code-style.md  configuration.md  deployment.md  generation-guide.md  mcp-client-setup.md  mcp-tools.md  multi-format.md  research-guide.md  type-safety.md
docs/reviews/: audit-2026-02-27.md  audit-2026-02-28.md
docs/specs/: duplicate-indexation-guard.md
scripts/: eval_rag.py
specs/: refactoring-plan.md
src/: main.py
src/api/: __init__.py  auth.py  dependencies.py  rate_limit.py
src/api/routes/: __init__.py  documents.py  health.py  search.py
src/core/: __init__.py  config.py  exceptions.py  file_validation.py  logging.py
src/mcp/: server.py  types.py
src/mcp/tools/: __init__.py  base.py  create_excel.py  create_presentation.py  create_word.py  delete_document.py  edit_excel.py  edit_presentation.py  get_document.py  get_excel_formulas.py  index_document.py  inspect_generated_file.py  inspect_template.py  list_available_documents.py  list_available_pdfs.py  list_indexed_documents.py  read_document_content.py  search.py  search_base.py  search_hybrid.py  search_semantic.py
src/models/: __init__.py  api.py  chunk.py  document.py  excel.py  excel_edit.py  excel_generation.py  extraction.py  presentation_edit.py  presentation_generation.py  search.py  template_inspection.py  types.py  unified.py  word.py
src/services/chunking/: __init__.py  chunker.py  content_detection.py  page_mapping.py  parsing.py
src/services/document/: __init__.py  base_generator.py  router.py
src/services/embedding/: __init__.py  mistral_embedder.py  sparse_embedder.py
src/services/excel/: __init__.py  editor.py  extractor.py  generator.py
src/services/inspection/: __init__.py  file_inspector.py  template_inspector.py
src/services/pdf/: __init__.py  analyzer.py  native_extractor.py  ocr_processor.py
src/services/pipeline/: __init__.py  orchestrator.py
src/services/presentation/: __init__.py  editor.py  generator.py  shape_finders.py
src/services/vector/: __init__.py  filters.py  payload.py  payload_builder.py  payload_reader.py  qdrant_store.py
src/services/word/: __init__.py  extractor.py  generator.py
tests/: conftest.py
tests/e2e/: test_excel_pipeline.py  test_full_pipeline.py  test_presentation_pipeline.py  test_word_pipeline.py
tests/eval/: golden_questions.yml
tests/integration/: test_create_excel_integration.py  test_edit_excel_integration.py  test_ocr.py  test_vector_store.py
tests/unit/: test_rate_limiting.py
tests/unit/api/: test_auth.py  test_dependencies.py  test_documents_routes.py  test_health_routes.py  test_main.py  test_search_routes.py
tests/unit/core/: test_config.py  test_exceptions.py  test_file_validation.py  test_logging.py  test_rate_limiting.py
tests/unit/mcp/: __init__.py  test_create_excel.py  test_create_presentation.py  test_create_word.py  test_delete_document.py  test_edit_excel.py  test_edit_presentation.py  test_error_formatting.py  test_extract_document.py  test_get_collection_info.py  test_get_document.py  test_get_excel_formulas.py  test_index_document.py  test_inspect_generated_file.py  test_inspect_template.py  test_list_available_documents.py  test_list_available_documents_sources.py  test_list_indexed_documents.py  test_read_document_content.py  test_search.py  test_search_hybrid.py  test_search_semantic.py  test_server.py
tests/unit/models/: test_api_params.py  test_excel_edit.py  test_excel_generation.py  test_models.py  test_presentation_edit.py  test_presentation_generation.py  test_template_inspection.py  test_unified.py
tests/unit/services/: test_analyzer.py  test_chunker.py  test_extractor.py  test_orchestrator.py  test_qdrant_store.py
tests/unit/services/chunking/: test_chunker.py  test_content_detection.py  test_page_mapping.py  test_parsing.py
tests/unit/services/document/: test_base_generator.py  test_document_router.py
tests/unit/services/embedding/: test_embedder.py  test_sparse_embedder.py
tests/unit/services/excel/: __init__.py  test_editor.py  test_extractor.py  test_generator.py
tests/unit/services/inspection/: test_file_inspector.py  test_template_inspector.py
tests/unit/services/pdf/: test_analyzer.py  test_native_extractor.py  test_ocr_processor.py
tests/unit/services/pipeline/: test_orchestrator.py
tests/unit/services/presentation/: test_editor.py  test_generator.py
tests/unit/services/vector/: test_filters.py  test_payload_builder.py  test_payload_reader.py  test_qdrant_store.py
tests/unit/services/word/: __init__.py  test_extractor.py  test_word_generator.py
