[project]
name = "mcp-zileo-rag"
version = "0.1.0"
description = "MCP Server for PDF processing with OCR and vector search"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Assistance Micro Design"}
]
keywords = ["mcp", "pdf", "ocr", "vector-search", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",

    # MCP Protocol
    "mcp>=1.0.0",

    # PDF Processing
    "pymupdf>=1.24.0",
    "pymupdf4llm>=0.0.10",

    # Mistral
    "mistralai>=1.0.0",

    # Vector Store
    "qdrant-client>=1.9.0",

    # Utils
    "tiktoken>=0.7.0",
    "tenacity>=8.2.0",
    "python-multipart>=0.0.9",
    "structlog>=24.1.0",

    # Excel Processing (Sprint 2)
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",

    # Word Processing (Sprint 3)
    "docx2python>=2.0.0",
    "python-docx>=1.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/zileo/mcp-zileo-rag"
Documentation = "https://github.com/zileo/mcp-zileo-rag#readme"
Repository = "https://github.com/zileo/mcp-zileo-rag.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# =============================================================================
# RUFF - Linting & Formatting
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # pylint
    "RUF",    # ruff-specific
]
ignore = [
    "E501",     # line too long (handled by formatter)
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "TC001",    # Move application import into TYPE_CHECKING (false positive for runtime imports)
    "TC003",    # Move stdlib import into TYPE_CHECKING (false positive for runtime imports)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# =============================================================================
# MYPY - Type Checking
# =============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "fitz",
    "fitz.*",
    "pymupdf",
    "pymupdf.*",
    "pymupdf4llm",
    "pymupdf4llm.*",
    "mistralai",
    "mistralai.*",
    "qdrant_client",
    "qdrant_client.*",
    "tiktoken",
    "tiktoken.*",
    "structlog",
    "structlog.*",
    "mcp",
    "mcp.*",
    "openpyxl",
    "openpyxl.*",
    "xlrd",
    "xlrd.*",
    "docx2python",
    "docx2python.*",
    "docx",
    "docx.*",
    "PIL",
    "PIL.*",
]
ignore_missing_imports = true
follow_imports = "skip"

# =============================================================================
# PYTEST - Testing
# =============================================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# =============================================================================
# COVERAGE
# =============================================================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80
